# opaiRe

./: .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY.md  DEPLOY_LINUX_MIHOMO.md  Dockerfile  PR_DESCRIPTION.md  README.md  RELEASE.md  SYSTEM.md  UPSTREAM_VERSION  VERSION  config.example.yaml  docker-compose.yml  docker-compose2.yml  global_state.py  index.html  index.html.bak  pyproject.toml  recover_v2raya_panel.ps1  release.ps1  start.ps1  stop.ps1  update_v2rayn_subscription.ps1  wfxl_openai_regst.py
routers/: account_routes.py  api_routes.py  proxy_routes.py  service_routes.py  system_routes.py
scripts/: server_disk_cleanup.sh
tests/: test_account_revive_status.py  test_clash_manager_evicted_nodes_clear.py  test_clash_manager_imported_subscription.py  test_clash_manager_runtime_config.py  test_clash_manager_subscription_add.py  test_cloud_accounts_route.py  test_core_engine_abort_cleanup.py  test_core_engine_local_presence_gate.py  test_local_microsoft_service_abuse_mode.py  test_mail_service_abuse_mode.py  test_mail_service_code_wait.py  test_proxy_manager_node_eviction.py  test_proxy_manager_v2raya.py  test_proxy_manager_v2raya_api_url.py  test_proxy_manager_v2rayn.py  test_register_shared_batch_net_check.py  test_sub2api_proxy_pool.py  test_sub2api_shared_switch_signal.py  test_subscription_fetcher.py  test_system_routes_config_save.py  test_task_log_guard.py
utils/: ai_service.py  config.py  config_save_guard.py  core_engine.py  db_manager.py  duckmail_service.py  generator_email_service.py  gmail_oauth_handler.py  gmail_service.py  hero_sms.py  luckmail_service.py  mail_service.py  proxy_manager.py  register.py  sub2api_client.py  task_log_guard.py  tempmail_org.py  tempmail_service.py  tg_notifier.py
(+22 files in other folders)
